Modificando peticion para obtener vigencia con el numero del contrato #4
